@@ -11,7 +11,7 @@ import org.lmu.JSON.JSONArray;
 import org.lmu.JSON.JSONObject;
 import org.lmu.JSON.parser.JSONParser;
 import org.lmu.JSON.parser.ParseException;
-
+import java.util.Arrays;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.UnknownHostException;
@@ -19,16 +19,19 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class FlinkJobDistribution {
+    private final static String DBNAME = "samba";
+    private final static String COLLECTION = "jobs";
+    private final static MongoCredential CREDENTIALS = MongoCredential.createMongoCRCredential("sambauser",DBNAME, "teamsamba".toCharArray());
+    private final static String URL = "sambahost.dyndns.lrz.de";
+    private final static int PORT = 27017;
 
     public JSONObject getJobJSONObject(String jobName) throws UnknownHostException, ParseException {
-        MongoClient mongoClient = new MongoClient("sambahost.dyndns.lrz.de", 27017);
-        DBCollection coll = mongoClient.getDB("samba").getCollection("jobs");
-
+	    MongoClient mongoClient = new MongoClient(new ServerAddress(URL, PORT), Arrays.asList(CREDENTIALS));
+        DBCollection coll = mongoClient.getDB(DBNAME).getCollection(COLLECTION);
         BasicDBObject query = new BasicDBObject("job_name", jobName);
 
         DBCursor cursor = coll.find(query);
         if(cursor== null){
-            //System.out.println("Problem with Database");
             return null;
         }
 
@@ -36,31 +39,23 @@ public class FlinkJobDistribution {
         try{
             while(cursor.hasNext()){
                 job = (BasicDBObject) cursor.next();
-                //System.out.println(job);
-
             }
         } finally{
             cursor.close();
         }
-
         if(job == null){
             System.out.println("Query: " + query + " found nothing");
         }
-
         mongoClient.close();
-
         return (JSONObject) new JSONParser().parse(job.toString());
-
     }
 
     public void saveResultJSONObjectToMongoDB(JSONObject jsonObject) throws UnknownHostException {
-        MongoClient mongoClient = new MongoClient("sambahost.dyndns.lrz.de", 27017);
-        DBCollection coll = mongoClient.getDB("samba").getCollection("results");
-
-        DBObject b = (DBObject)com.mongodb.util.JSON.parse(jsonObject.toString()) ;
+	    MongoClient mongoClient = new MongoClient(new ServerAddress(URL, PORT), Arrays.asList(CREDENTIALS));
+	    DBCollection coll = mongoClient.getDB(DBNAME).getCollection(COLLECTION);
+	    DBObject b = (DBObject)com.mongodb.util.JSON.parse(jsonObject.toString()) ;
         System.out.println("Object: " + b);
         coll.insert(b);
-
         mongoClient.close();
     }
 
@@ -79,20 +74,14 @@ public class FlinkJobDistribution {
     }
 
     public static JSONArray distribute(JSONObject json) throws Exception {
-        // set up the batch execution environment
         final ExecutionEnvironment env = ExecutionEnvironment.getExecutionEnvironment();
-        env.getConfig().disableSysoutLogging();
-        org.apache.log4j.BasicConfigurator.configure(new NullAppender());
 
         JSONObject algorithms = (JSONObject) json.get("algorithms");
-
         JSONObject svm = (JSONObject) algorithms.get("SVM");
-        System.out.println(svm.toJSONString());
         JSONObject lr = (JSONObject) algorithms.get("LR");
         JSONObject nn = (JSONObject) algorithms.get("NN");
 
         String jobName = json.get("job_name").toString();
-
         System.out.println("FlinkJobDistribution: Job: " + jobName);
         //TODO env.createProgramPlan(jobName);
 
@@ -107,31 +96,14 @@ public class FlinkJobDistribution {
         fillList(json, nnArray, tasks);
 
         System.out.println("FlinkJobDistripbution: Distribute: " + tasks.size() + " jobs on the workers:");
-        //for (String task: tasks) {
-            //System.out.println("FlinkJobDistribution: Do Task" +  task);
-        //}
-
-        DataSet<String> elementsDataSet = env.fromCollection(tasks);
-
-        //distribute on workers
-        DataSet<String> dataset = elementsDataSet.flatMap(new OnWorkers());
-
-        System.out.println("collect");
-        List<String> res = dataset.collect();
+        DataSet<String> dataset = env.fromCollection(tasks).flatMap(new OnWorkers());
 
         JSONArray resJsonArray = new JSONArray();
         JSONParser parser = new JSONParser();
-        for (String s : res) {
+        for (String s : dataset.collect()) {
             System.out.print(s);
             resJsonArray.add(parser.parse(s));
         }
-
-
-
-        //saves the result as text
-        //dataset.writeAsText("result.txt", FileSystem.WriteMode.OVERWRITE);
-        //dataset.print();
-
         return resJsonArray;
     }
 
@@ -139,46 +111,40 @@ public class FlinkJobDistribution {
         for (Object obj : array) {
             obj = new JSONObject((JSONObject) obj);
             ((JSONObject) obj).put("job_name", json.get("job_name"));
-            //((JSONObject) obj).put("data", data);
             tasks.add(((JSONObject) obj).toJSONString());
         }
     }
 
-    private static JSONArray createSVMJobs(JSONObject svm) {
+    private static JSONArray createSVMJobs(JSONObject svm) throws Exception{
         JSONArray c_array = (JSONArray) svm.get("C");
         JSONArray e_array = (JSONArray) svm.get("epsilon");
         JSONArray kernel_array = (JSONArray) svm.get("kernel");
-        JSONArray degree_array = (JSONArray) svm.get("degree");
         JSONArray gamma_array = (JSONArray) svm.get("gamma");
-        JSONArray coef_array = (JSONArray) svm.get("coef0");
 
         JSONArray result = new JSONArray();
-        if(c_array != null & e_array != null & kernel_array != null & degree_array != null & gamma_array != null & coef_array != null) {
+        if(c_array != null & e_array != null & kernel_array != null & gamma_array != null) {
             for (Object c : c_array) {
                 for (Object e : e_array) {
                     for (Object kernel : kernel_array) {
-                        for (Object degree : degree_array) {
-                            for (Object gamma : gamma_array) {
-                                for (Object coef0 : coef_array) {
-                                    JSONObject obj = new JSONObject();
-                                    obj.put("algorithm", "SVM");
-                                    obj.put("C", c);
-                                    obj.put("epsilon", e);
-                                    obj.put("kernel", kernel);
-                                    obj.put("degree", degree);
-                                    obj.put("gamma", gamma);
-                                    obj.put("coef0", coef0);
-                                    obj.put("shrinking", svm.get("shrinking"));
-                                    obj.put("tolerance", svm.get("tolerance"));
-                                    obj.put("cache_size", svm.get("cache_size"));
-                                    obj.put("max_iter", svm.get("max_iter"));
-                                    result.add(obj);
-                                }
-                            }
+                        for (Object gamma : gamma_array) {
+                            JSONObject obj = new JSONObject();
+                            obj.put("algorithm", "SVM");
+                            obj.put("C", Double.parseDouble(c.toString()));
+                            obj.put("epsilon", Double.parseDouble(e.toString()));
+                            obj.put("kernel", kernel);
+                            obj.put("gamma", Double.parseDouble(gamma.toString()));
+                            obj.put("shrinking", svm.get("shrinking"));
+                            obj.put("tolerance", Double.parseDouble(svm.get("tolerance").toString()));
+                            obj.put("cache_size", Double.parseDouble(svm.get("cache_size").toString()));
+                            obj.put("max_iter", Integer.parseInt(svm.get("max_iter").toString()));
+                            result.add(obj);
                         }
                     }
                 }
             }
+        }
+        else{
+            throw new Exception("SVM-ARRAYS NULL");
         }
         return result;
     }
@@ -195,62 +161,56 @@ public class FlinkJobDistribution {
         return result;
     }
 
-    private static JSONArray createNNJobs(JSONObject nn) {
-        return new JSONArray();
+    private static JSONArray createNNJobs(JSONObject nn) throws Exception {
+        JSONArray learningRates = (JSONArray) nn.get("learning_rate");
+        JSONArray epochs = (JSONArray) nn.get("epochs");
+        JSONArray costFunctions = (JSONArray) nn.get("cost_function");
+        JSONArray result = new JSONArray();
+        if(learningRates != null & epochs != null & costFunctions != null) {
+            for (Object learningRate : learningRates) {
+                for (Object epoch : epochs) {
+                    for (Object costFunction : costFunctions) {
+                        JSONObject obj = new JSONObject();
+                        obj.put("algorithm", "NN");
+                        obj.put("normalization", nn.get("normalization"));
+                        obj.put("learning_rate", Double.parseDouble(learningRate.toString()));
+                        obj.put("epochs", Integer.parseInt(epoch.toString()));
+                        obj.put("cost_function", costFunction);
+                        result.add(obj);
+                    }
+                }
+            }
+        }
+        else{
+            throw new Exception("NN-ARRAYS NULL");
+        }
+        return result;
     }
 
     public static final class OnWorkers implements FlatMapFunction<String, String> {
-        /**
-         * serial uid.
-         */
         public static final long serialVersionUID = 1L;
 
         @Override
         public void flatMap(String value, final Collector<String> out) {
-
             String res = "";
             try {
-                Runtime rt = Runtime.getRuntime();
-
-
-                String cmd;
-                String pythonPath;
-
-
-                //rt.exec("source activate dataScience");
-                cmd = "/root/anaconda/envs/dataScience/bin/python3";
-                pythonPath = "/root/code/sose17-small-data/python/traffic-prediction/src/flink/trainModel.py";
-
-
-                //TODO cl
-                //cmd = "/home/l/lemkec/anaconda3/bin/python";
-                // TODO cl
-                //pythonPath = "/home/l/lemkec/BigDataScience/sose17-small-data/python/traffic-prediction/src/flink/trainModel.py";
-
-
-                //Process proc = rt.exec(new String[]{cmd, pythonPath, value});
-                //TODO ... cmd
-                Process proc = rt.exec(cmd + " "  + pythonPath + " " + value);
-
+                String pythonPath = "/root/anaconda/envs/dataScience/bin/python3";
+                String trainModelPath = "/root/code/sose17-small-data/python/traffic-prediction/src/flink/trainModel.py";
+                Process proc = Runtime.getRuntime().exec(pythonPath + " "  + trainModelPath + " " + value);
                 BufferedReader stdInput = new BufferedReader(new InputStreamReader(proc.getInputStream()));
                 BufferedReader stdError = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
+                String s;
 
-                String s = null;
                 while ((s = stdInput.readLine()) != null) {
-
                     res += "\n" + s;
                 }
 
                 // read any errors from the attempted command
-                //System.out.println("----Here is the standard error of the command (if any):\n");
                 while ((s = stdError.readLine()) != null) {
-
                     res += "\n" + s;
                 }
-
             } catch (Exception e) {
                 res += e.toString();
-
             }
             out.collect(res);
         }
